datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__case_sensitive_identifiers_user_defined_aggregates.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&result)
---
+-------------+
| MY_AVG(t.i) |
+-------------+
| 1.0         |
+-------------+
