datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__parameterized_aggregate_udf.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+------+---+---+
| text | a | b |
+------+---+---+
| foo  | 1 | 2 |
+------+---+---+
