datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__setup.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+-------+----------------------------+
| value | time                       |
+-------+----------------------------+
| 2.0   | 1970-01-01T00:00:00.000002 |
| 3.0   | 1970-01-01T00:00:00.000003 |
| 1.0   | 1970-01-01T00:00:00.000004 |
| 5.0   | 1970-01-01T00:00:00.000005 |
| 5.0   | 1970-01-01T00:00:00.000005 |
+-------+----------------------------+
