datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__simple_udaf.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&result)
---
+-------------+
| my_avg(t.a) |
+-------------+
| 3.0         |
+-------------+
