datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__udaf_as_window_with_frame.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+----------------------------+
| time_sum                   |
+----------------------------+
| 1970-01-01T00:00:00.000005 |
| 1970-01-01T00:00:00.000009 |
| 1970-01-01T00:00:00.000012 |
| 1970-01-01T00:00:00.000014 |
| 1970-01-01T00:00:00.000010 |
+----------------------------+
