datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__udaf_returning_struct.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+------------------------------------------------+
| first(t.value,t.time)                          |
+------------------------------------------------+
| {value: 2.0, time: 1970-01-01T00:00:00.000002} |
+------------------------------------------------+
