datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__udaf_returning_struct_subquery.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+-----------------+----------------------------+
| sq.first[value] | sq.first[time]             |
+-----------------+----------------------------+
| 2.0             | 1970-01-01T00:00:00.000002 |
+-----------------+----------------------------+
