datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__udaf_shadows_builtin_fn-2.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+----------------------------+
| sum(t.time)                |
+----------------------------+
| 1970-01-01T00:00:00.000019 |
+----------------------------+
