datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__udaf_shadows_builtin_fn.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&actual)
---
+---------------------------------------+
| sum(arrow_cast(t.time,Utf8("Int64"))) |
+---------------------------------------+
| 19000                                 |
+---------------------------------------+
