datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_aggregates__user_defined_functions_with_alias-2.snap
---
source: datafusion/core/tests/user_defined/user_defined_aggregates.rs
expression: fmt_batches(&alias_result)
---
+------------+
| dummy(t.i) |
+------------+
| 1.0        |
+------------+
